# cuda-practice

./: .gitignore  readme.md
01-copy/: .gitignore  CMakeLists.txt  README.md  justfile
01-copy/src/: main.cu
scripts/: new_from_template.sh
